--- a/bower.json
+++ b/bower.json
@@ -31,7 +31,7 @@
     "purescript-maps": "^3.0.0",
     "purescript-functions": "^3.0.0",
     "purescript-profunctor": "^3.0.0",
-    "purescript-react": "https://github.com/born2defy/purescript-react.git#refs",
+    "purescript-react": "^4.1.0",
     "purescript-globals": "^3.0.0",
     "purescript-dom": "^4.2.0",
     "purescript-smolder": "https://github.com/born2defy/purescript-smolder.git#altRender",
