--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "dependencies": {
     "bower": "^1.8.0",
     "pulp": "^11.0.0",
-    "purescript": "^0.11.4"
+    "purescript": "^0.11.4",
+    "create-react-class": "^15.6.2"
   },
   "directories": {
     "doc": "docs",
